<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/camera"/>
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/manual"/>
        <item
            android:id="@+id/nav_lampconfig"
            android:icon="@drawable/ic_lightbulb"
            android:title="@string/lampconfig"/>
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/config"/>
    </group>
    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>

</menu>
